kubernetes/apps/forgejo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
